tests/ui/fail/fail-on-enum.rs
use variant_partial_eq::VariantPartialEq;

#[derive(VariantPartialEq)]
enum MyEnum {}

fn main() {}